--- a/webdir/AirHockey.css
+++ b/webdir/AirHockey.css
@@ -23,6 +23,20 @@ h1 {
 	right: 0;
 }
 
+.score1 {
+  position: absolute;
+  right: 10px;
+  width: 10px;
+  padding: 80px;
+}
+
+.score2 {
+  position: relative;
+  left: 10px;
+  width: 10px;
+  padding: 80px;
+}
+
 #ball {
 	position: relative; /* needed to move with js */
 	/*display: inline-block; /* vertical alignment */
